<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/appBackground"
    android:gravity="center_horizontal">

    <!-- Titre -->
    <TextView
        android:id="@+id/JoinOrCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/JoinOrCreate"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!-- Boutons centrés -->
    <Button
        android:id="@+id/joinFamily"
        android:layout_width="300dp"
        android:layout_height="61dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/greenBtn"
        android:padding="16dp"
        android:text="@string/joinFamilly"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/createFamily"
        android:layout_width="300dp"
        android:layout_height="61dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/greenBtn"
        android:padding="16dp"
        android:text="@string/createFamily"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <!-- Image centrée -->
    <ImageView
        android:id="@+id/check"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:visibility="visible"
        app:srcCompat="@drawable/animated_check" />

    <!-- Bouton Next -->
    <Button
        android:id="@+id/nextButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/green"
        android:padding="12dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>
