<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/appBackground"
    tools:context=".activities.settings.UpdateProfileActivity">

   
    <TextView
        android:layout_marginTop="18dp"
        android:id="@+id/HelloTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/helloTxt"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/registerTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerTxtView"
        android:textColor="@color/grey"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_email"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginBottom="4dp" />


    <EditText
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_mail"
        android:background="@drawable/rounded_border"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginBottom="4dp" />
    
    <EditText
        android:id="@+id/usrName"
        android:drawablePadding="16dp"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:hint="@string/name"
        android:drawableStart="@drawable/ic_edit_user"
        android:background="@drawable/rounded_border"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstName"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginBottom="4dp" />
    <EditText
        android:id="@+id/firstName"
        android:drawableStart="@drawable/ic_edit_user"
        android:drawablePadding="16dp"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:hint="@string/firstName"
        android:background="@drawable/rounded_border"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginBottom="4dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/laypass"
        android:layout_width="362dp"
        android:layout_height="51dp"
        >

        <EditText
            android:drawableStart="@drawable/ic_password"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_border"
            android:drawablePadding="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColorHint="@color/greyOr"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            />

        <ImageView
            android:id="@+id/show_pass_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:alpha=".5"
            android:onClick="ShowHidePass"
            android:padding="5dp"
            android:src="@drawable/ic_eye_open"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/laypass"
            app:layout_constraintTop_toTopOf="@+id/password" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <RelativeLayout
        android:layout_width="235dp"
        android:layout_height="45dp"
        android:layout_centerVertical="true"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/SignUpBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.0">

        <CheckBox
            android:id="@+id/termsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/termsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/termsCheckBox"
            android:text="@string/terms"
            android:textSize="10sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/SignUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:backgroundTint="@color/greenBtn"
        android:textAllCaps="false"
        android:gravity="center"
        android:padding="16dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/registerError"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/red"
        android:textSize="12sp" />


    <LinearLayout
        android:layout_width="171dp"
        android:layout_height="43dp"
        android:layout_marginBottom="124dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpBtn"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/haveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/haveAccount"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:text="@string/login"
            android:textColor="@color/orangeBtn"
            android:textSize="10sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
