<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_background"
    android:padding="24dp"
    android:gravity="center">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@raw/family1"
        app:tint="@color/black"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/familyCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border"
        android:hint="@string/familyCode"
        android:padding="16dp"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/joinFamily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/greenBtn"
        android:padding="16dp"
        android:text="@string/joinFamily"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginBottom="24dp" />

    <TextView
        android:id="@+id/tv_welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_welcome_message"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp" />

    <TextView
        android:id="@+id/tv_family_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="#Family Name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>
